--- a/src/scss/layouts/_footer.scss
+++ b/src/scss/layouts/_footer.scss
@@ -3,22 +3,24 @@
   padding-top: 50px;
   background: $basic-gray;
   color: $white;
-  @include media-breakpoint-down(md){
-    padding-top: 20px;
-  }
   h5{
     font-weight: 300;
     text-transform: uppercase;
   }
+  @include nav-sm-media{
+    padding-top: 0;
+    .qparts-benefit,
+    .site-map,
+    .subscribe{
+      display: none;
+    }
+  };
 }
 .qparts-benefit{
     @extend .list-unstyled;
     @extend .justify-content-center;
     @include make-row();
     padding-bottom: 20px;
-    @include media-breakpoint-down(md){
-      display: none;
-    };
     i{
         padding-#{$right}: 15px;
         @include opacity(0.5);
@@ -73,11 +75,6 @@
     border-top: 1px solid rgba(255, 255, 255, 0.1);
     padding-bottom: 25px;
     margin-bottom: 0;
-      @include media-breakpoint-down(md){
-      border-top-width: 0;
-      padding-top: 0;
-      padding-bottom: 0;
-    }
     ul li{
       @include if-ltr{
         margin-bottom: 2px;
@@ -98,22 +95,13 @@
         @include opacity(0.9);
       }
     }
-    .col-auto{
-      @include media-breakpoint-down(md){
-        display: none;
-      };
-    }
   }
   .subscribe {
-    margin-bottom: 25px;
     p{
       font-weight: 300;
       @include font-size(14px);
       @include opacity(0.5);
       margin-bottom: 10px;
-      @include media-breakpoint-down(md){
-        display: none;
-      }
     }
     .form-control{
         height: 50px;
@@ -141,14 +129,6 @@
           top: 2px;
         }
       }
-      @include media-breakpoint-down(md){
-        span{
-          display: none;
-        }
-        .icon-email{
-          display: block !important;
-        }
-      };
       @include font-size(20px);
       i{
         height: 20px;
@@ -157,78 +137,19 @@
         }
       }
     }
-
   }
   .copy-rights{
-    @include text-left;
+    text-align: center;
+    padding-top: 10px;
     padding-bottom: 10px;
-    p, a{
-      @include font-size(13px);
-      @include opacity(0.5);
-      margin-bottom: 0;
-    }
-    a{
-      color: $white;
-    }
-    p{
-      @include media-breakpoint-down(md){
-        text-align: left !important;
-      }
-    }
-    .text-center{
-      margin-top: 17px;
-    }
-    .sponser{
-      @include media-breakpoint-down(md){
-        display: none;
-      }
-    }
-  }
-  .sponser{
-    > span{
-      border-radius: corner-values(0 0 $border-radius-base $border-radius-base);
-      display: inline-block;
-      background: $white;
-      padding: 5px 11px;
-      margin-#{$right}: 6px;
-
-    }
-    i{
-      width: 68px;
-      height: 29px;
-      @extend .sprite;
-      background-position: 0 0;
-      margin: 0;
-    }
-    p{
-      position: relative;
-      display: inline-block;
-      top: -4px;
-    }
-  }
-  .nav-sm{
-    .sponser{
-      border-top: 1px solid $light-gray-2;
-      background: $light-gray;
-      margin-top: 20px !important;
-      > span{
-        border-radius: 0;
-        background: transparent;
-        padding: 0;
-      }
-      p{
-        @include font-size(13px);
-        font-weight: 400 !important;
-        margin-bottom: 0;
-        white-space: normal;
-        top: 0;
-      }
-    }
+    @include font-size(16px);
+    @include opacity(0.5);
   }
   .social-footer{
-    @extend .list-inline;
-    @extend .text-#{$right};
-    margin-top: 13px;
+    a{
+      display: inline-block;
+      margin-#{$right}: 10px;
+    }
     i{
       color: $white;
     }
