garage dropdown in model, popover position bug

--- a/src/scss/layouts/_home-details.scss
+++ b/src/scss/layouts/_home-details.scss
@@ -686,6 +686,7 @@
   overflow: hidden;
   position: relative;
   height: 370px;
+  background: $basic-gray;
   @include media-breakpoint-down(sm){
     height: 330px;
   };
