--- a/src/scss/modules/_select.scss
+++ b/src/scss/modules/_select.scss
@@ -20,7 +20,7 @@
     cursor: pointer;
     position: static !important;
     width: auto !important;
-
+    border-radius: 0;
   }
   .select__single-value {
     position: static;
