--- a/public/css/main-ar/main-ar.css
+++ b/public/css/main-ar/main-ar.css
@@ -8977,6 +8977,7 @@ h1, h2, h3, h4, h5, h6 {
   cursor: pointer;
   position: static !important;
   width: auto !important;
+  border-radius: 0;
 }
 .css-10nd86i .select__single-value {
   position: static;
@@ -9679,36 +9680,37 @@ body {
 .vin-modal .make {
   min-width: 230px;
 }
-@media (max-width: 767.98px) {
-  .vin-modal .make {
-    padding-bottom: 10px;
-  }
-}
-.vin-modal [class*=col]:not(:first-child) {
+.vin-modal form [class*=col]:not(:first-child) {
   padding-right: 0;
 }
 @media (max-width: 767.98px) {
-  .vin-modal [class*=col]:not(:first-child) {
+  .vin-modal form [class*=col]:not(:first-child) {
     padding-right: 15px;
   }
 }
-.vin-modal [class*=col]:not(:last-child) {
-  padding-left: 10px;
+.vin-modal form [class*=col]:not(:last-child) {
+  padding-left: 5px;
 }
-.vin-modal [class*=col]:first-child .select__control {
+@media (max-width: 767.98px) {
+  .vin-modal form [class*=col]:not(:last-child) {
+    padding-left: 15px;
+    padding-bottom: 10px;
+  }
+}
+.vin-modal form [class*=col]:first-child .select__control {
   border-top-right-radius: 20px;
   border-bottom-right-radius: 20px;
 }
 @media (max-width: 767.98px) {
-  .vin-modal [class*=col]:first-child .select__control {
+  .vin-modal form [class*=col]:first-child .select__control {
     border-bottom-right-radius: 0;
   }
 }
-.vin-modal [class*=col]:nth-last-child(2) .RenderField, .vin-modal [class*=col]:nth-last-child(2) .form-control {
+.vin-modal form [class*=col]:nth-last-child(2) .RenderField, .vin-modal form [class*=col]:nth-last-child(2) .form-control {
   border-bottom-left-radius: 20px;
 }
 @media (max-width: 767.98px) {
-  .vin-modal [class*=col]:nth-last-child(2) .has-float-label, .vin-modal [class*=col]:nth-last-child(2) .form-control {
+  .vin-modal form [class*=col]:nth-last-child(2) .has-float-label, .vin-modal form [class*=col]:nth-last-child(2) .form-control {
     border-bottom-right-radius: 20px !important;
   }
 }
@@ -9726,8 +9728,13 @@ body {
   padding-top: 5px;
   padding-right: 15px;
   padding-left: 15px;
-  display: flex;
-  justify-content: space-between;
+}
+@media (min-width: 576px) {
+  .vin-modal .VIN-info {
+    padding-top: 5px;
+    display: flex;
+    justify-content: space-between;
+  }
 }
 .vin-modal .VIN-info p {
   display: flex;
@@ -9736,24 +9743,13 @@ body {
   font-size: 0.8125rem;
   color: rgba(55, 54, 60, 0.7);
 }
-.vin-modal .VIN-info p a {
-  color: rgba(55, 54, 60, 0.7);
-}
-.vin-modal .VIN-info p a:hover {
-  color: #37363c;
-}
 .vin-modal .VIN-info .id-img {
-  float: left;
+  cursor: pointer;
 }
 @media (max-width: 575.98px) {
   .vin-modal .VIN-info .id-img {
-    float: none;
     margin-top: 10px;
   }
-}
-.vin-modal .VIN-info .id-img a {
-  display: flex;
-  align-items: center;
 }
 .vin-modal .VIN-info .id-img i {
   height: 20px;
@@ -9764,32 +9760,28 @@ body {
 .vin-modal .VIN-info .id-img i:before {
   top: -3px;
 }
-.vin-modal .popover {
-  position: absolute;
-  top: -122px !important;
-}
 @media (max-width: 767.98px) {
   .vin-modal .actions {
     display: block !important;
   }
-  .vin-modal .actions .btn {
-    height: 50px;
-  }
 }
 .vin-modal .actions .btn {
   display: flex;
-  height: 55px;
+  height: 50px;
   align-items: center;
+  font-size: 17px;
+  font-size: 1.0625rem;
+}
+.vin-modal .actions .col-auto {
+  padding-left: 10px !important;
 }
 .vin-modal .actions .col-auto .btn {
-  font-size: 19px;
-  font-size: 1.1875rem;
   border-top-left-radius: 0 !important;
   border-bottom-left-radius: 0 !important;
 }
 @media (max-width: 767.98px) {
   .vin-modal .actions .col {
-    padding-right: 0;
+    padding-right: 0 !important;
   }
   .vin-modal .actions .col .btn {
     border-bottom-right-radius: 0 !important;
@@ -9849,6 +9841,15 @@ body {
 .vin-modal .two-actions .btn-primary, .vin-modal .two-actions .signin-list li:first-child a, .signin-list li:first-child .vin-modal .two-actions a {
   border-bottom-right-radius: 0 !important;
 }
+@media (min-width: 992px) {
+  .vin-modal .year {
+    max-width: 120px;
+  }
+}
+.vin-modal .garage-dropdown {
+  border-top-width: 1px;
+  border-color: #efeeee;
+}
 
 .garage-dropdown {
   padding-top: 0;
@@ -9856,20 +9857,6 @@ body {
 .garage-dropdown .cached,
 .garage-dropdown .saved {
   padding: 15px 15px 0;
-}
-@media (min-width: 768px) {
-  .garage-dropdown {
-    min-width: 550px;
-  }
-}
-.garage-dropdown:before {
-  border-bottom: 12px solid #efeeee;
-  border-right: 12px solid transparent;
-  border-left: 12px solid transparent;
-  position: absolute;
-  right: 50px;
-  top: -13px;
-  content: " ";
 }
 .garage-dropdown .media, .garage-dropdown .main-parts a, .main-parts .garage-dropdown a {
   padding-bottom: 12px;
@@ -10118,6 +10105,54 @@ body {
   .select-vechile-form .float-label .select-input,
 .select-white .float-label .select-input {
     height: 50px;
+  }
+}
+
+.vin-popover > p {
+  position: absolute;
+  left: 20px;
+  top: 15px;
+  z-index: 2;
+  margin-bottom: 0;
+  cursor: pointer;
+}
+.vin-popover > p i {
+  height: 20px;
+  font-size: 23px;
+  font-size: 1.4375rem;
+}
+.vin-popover > p i:before {
+  top: -3px;
+}
+
+.popover.vin {
+  min-width: 270px !important;
+  min-height: 150px !important;
+}
+.popover.vin .popover-body {
+  padding: 5px;
+}
+.popover.vin .popover-body img {
+  width: 100%;
+}
+
+@media (max-width: 991.98px) {
+  .add-vech-model [class*=col]:not(:first-child) {
+    padding-right: 15px;
+  }
+  .add-vech-model [class*=col]:not(:last-child) {
+    padding-left: 15px;
+    padding-bottom: 10px;
+  }
+  .add-vech-model [class*=col]:first-child .select__control {
+    border-bottom-right-radius: 0;
+  }
+  .add-vech-model [class*=col]:nth-last-child(2) .has-float-label, .add-vech-model [class*=col]:nth-last-child(2) .form-control {
+    border-bottom-right-radius: 20px !important;
+  }
+  .add-vech-model .VIN-info {
+    padding-top: 10px;
+    padding-bottom: 20px;
   }
 }
 
@@ -11715,6 +11750,13 @@ body {
   justify-content: center;
 }
 
+.dropdown-menu {
+  overflow: hidden;
+  border-radius: 0px 0px 20px 20px;
+  padding-bottom: 0;
+  border-width: 0;
+}
+
 .sec-header {
   text-align: right !important;
 }
@@ -13061,14 +13103,10 @@ ul.cd-secondary-nav .garage-dropdown .icon-vehicle-history {
 }
 .user-actions .dropdown-menu {
   text-align: right;
-  overflow: hidden;
-  border-radius: 0px 0px 20px 20px;
   right: auto !important;
   left: 0 !important;
   transform: none !important;
   top: calc(100% + 9px) !important;
-  border-width: 0;
-  padding-bottom: 0;
 }
 .user-actions .dropdown-menu > h6 {
   color: #37363c;
@@ -13104,6 +13142,11 @@ ul.cd-secondary-nav .garage-dropdown .icon-vehicle-history {
 }
 .user-actions .dropdown-menu > p a:hover i {
   margin-right: 5px !important;
+}
+@media (min-width: 768px) {
+  .user-actions .dropdown-menu.garage-dropdown {
+    min-width: 550px;
+  }
 }
 
 .signin-list {
@@ -13964,6 +14007,7 @@ ul.cd-secondary-nav .garage-dropdown .icon-vehicle-history {
   overflow: hidden;
   position: relative;
   height: 370px;
+  background: #37363c;
 }
 @media (max-width: 767.98px) {
   .vehicle-img {
@@ -23030,12 +23074,14 @@ form {
   margin-bottom: 0;
   padding-left: 10px;
 }
+.add-new-vehicle .garage-select.show .dropdown-toggle {
+  border-bottom-right-radius: 0 !important;
+  border-bottom-left-radius: 0 !important;
+}
 @media (max-width: 575.98px) {
   .add-new-vehicle .dropdown-menu {
     transform: none !important;
     top: 100% !important;
-    margin-top: -20px;
-    margin-top: 11px;
     width: 100%;
   }
   .add-new-vehicle .dropdown-menu:before {
