--- a/src/scss/base/_mixins.scss
+++ b/src/scss/base/_mixins.scss
@@ -307,3 +307,14 @@
     -ms-filter: 'FlipH';
   };
 }
+@mixin flip-h-ltr{
+  @include if-ltr{
+    display: inline-block;
+    -moz-transform: scaleX(-1);
+    -o-transform: scaleX(-1);
+    -webkit-transform: scaleX(-1);
+    transform: scaleX(-1);
+    filter: FlipH;
+    -ms-filter: 'FlipH';
+  };
+}
