--- a/public/css/main-ar/main-ar.css
+++ b/public/css/main-ar/main-ar.css
@@ -9858,6 +9858,12 @@ body {
 .garage-dropdown .saved {
   padding: 15px 15px 0;
 }
+@media (min-width: 768px) {
+  .garage-dropdown .cached,
+.garage-dropdown .saved {
+    min-width: 550px;
+  }
+}
 .garage-dropdown .media, .garage-dropdown .main-parts a, .main-parts .garage-dropdown a {
   padding-bottom: 12px;
   align-items: center;
@@ -10038,6 +10044,25 @@ body {
   opacity: 1;
   filter: alpha(opacity=100);
   text-decoration: none;
+}
+.garage-dropdown .empty-vehic {
+  padding: 1rem 1rem 0;
+  text-align: center;
+}
+.garage-dropdown .empty-vehic .btn {
+  display: inline-flex;
+  padding: 10px 15px;
+  font-size: 17px;
+  font-size: 1.0625rem;
+  margin-bottom: 0.6rem;
+}
+.garage-dropdown .empty-vehic .btn i {
+  font-size: 20px;
+  font-size: 1.25rem;
+  margin-left: 5px;
+}
+.garage-dropdown .empty-vehic p {
+  min-width: 300px;
 }
 
 .select-vechile-form .select__control,
@@ -11333,15 +11358,12 @@ body {
 .radio-custom [type=radio]:checked + label,
 .radio-custom [type=radio]:not(:checked) + label {
   position: relative;
-  padding-right: 18px;
+  padding-right: 25px;
   cursor: pointer;
-  line-height: 13px;
   display: inline-block;
   font-size: 14px;
   font-size: 0.875rem;
-  width: 20px;
-  height: 20px;
-  margin-bottom: 0;
+  margin-bottom: 5px;
 }
 .radio-custom [type=radio]:checked + label:before,
 .radio-custom [type=radio]:not(:checked) + label:before {
@@ -13142,11 +13164,6 @@ ul.cd-secondary-nav .garage-dropdown .icon-vehicle-history {
 }
 .user-actions .dropdown-menu > p a:hover i {
   margin-right: 5px !important;
-}
-@media (min-width: 768px) {
-  .user-actions .dropdown-menu.garage-dropdown {
-    min-width: 550px;
-  }
 }
 
 .signin-list {
@@ -16064,7 +16081,7 @@ ul.cd-secondary-nav .garage-dropdown .icon-vehicle-history {
   filter: alpha(opacity=100);
 }
 .info-list > ul li p, .info-list > ul li .actions, .info-list > ul li h6 {
-  padding-right: 20px;
+  padding-right: 25px;
 }
 
 .modal-body {
@@ -19136,7 +19153,7 @@ form {
   position: relative;
   color: #e2e2e3;
   line-height: 0.8;
-  right: -15px;
+  right: -7px;
   top: -10px;
 }
 .empty .rotate span, .cart-empty .rotate span {
